# ai-hedge-fund

./: .dockerignore  .env.example  README.md  pyproject.toml
app/: README.md  run.bat  run.sh
app/backend/: main.py
app/backend/alembic/versions/: add_llm_models_table.py
app/backend/database/: models.py
app/backend/routes/: hedge_fund.py  language_models.py
app/backend/services/: backtest_service.py  graph.py  model_list_service.py
app/frontend/src/components/panels/bottom/tabs/: regular-output.tsx
app/frontend/src/components/settings/models/: cloud.tsx
app/frontend/src/contexts/: node-context.tsx
app/frontend/src/data/: models.ts
app/frontend/src/nodes/components/: stock-analyzer-node.tsx
app/frontend/src/services/: types.ts
docker/: .dockerignore  Dockerfile
docs/: prompts.md
notebook/: test.ipynb
scripts/: sync_prompts_to_langfuse.py
src/: main.py
src/agents/: aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  michael_burry.py  mohnish_pabrai.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  stanley_druckenmiller.py  warren_buffett.py
src/graph/: state.py
src/llm/: api_models.json  models.py
src/prompts/: __init__.py  loader.py  registry.py
src/tools/: api.py
src/utils/: company_context.py  display.py  langfuse_callback.py  langsmith_tracing.py  llm.py  report.py
